<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_credentials" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/user_name">

        <EditText
            android:id="@+id/userName"
            android:layout_below="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textSize="20sp"
            android:hint="@string/username">

        </EditText>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/user_name"
        android:layout_height="wrap_content"
        android:id="@+id/user_pass">

        <EditText
            android:id="@+id/passWord"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:textSize="20sp"
            >
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/user_pass"
        android:layout_marginTop="20dp"
        android:text="@string/compute_sha_1_hash_of_password"
        android:textColor="@color/white_color"
        android:background="@drawable/roundshapedbtn"
        android:onClick="setContentView" />

    <Button
        android:id="@+id/btn2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="20dp"
        android:text="@string/compute_md5_hash_of_password"
        android:textColor="@color/white_color"
        android:background="@drawable/roundshapedbtn"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />


</RelativeLayout>
